{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 142,
  "lineage": "edcd1578-f251-9372-3ba6-02269b2e71cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4a2b4f5391612cd",
            "domain": "vpc",
            "id": "eipalloc-0d4a2b4f5391612cd",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-13-236-79-165.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.236.79.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Deployment": "tf",
              "Name": "aws-eip-ngw",
              "Use": "cloud-resume-challenge"
            },
            "tags_all": {
              "Deployment": "tf",
              "Name": "aws-eip-ngw",
              "Use": "cloud-resume-challenge"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw-syd-main",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-wp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws-main"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-syd-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws-main",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:596389246013:internet-gateway/igw-01a96ee1c0acc91f3",
            "id": "igw-01a96ee1c0acc91f3",
            "owner_id": "596389246013",
            "tags": {
              "Deployment": "tf",
              "Name": "aws-igw-syd-tf",
              "Use": "cloud-resume-challenge"
            },
            "tags_all": {
              "Deployment": "tf",
              "Name": "aws-igw-syd-tf",
              "Use": "cloud-resume-challenge"
            },
            "vpc_id": "vpc-06d97ae04aa47e027"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws-main",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws-main",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:596389246013:targetgroup/crc-alb-tg/66366ea8cbc89f3b",
            "arn_suffix": "targetgroup/crc-alb-tg/66366ea8cbc89f3b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200-299",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:596389246013:targetgroup/crc-alb-tg/66366ea8cbc89f3b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "crc-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Deployment": "tf",
              "Name": "aws-alb-tg-tf",
              "Use": "cloud-resume-challenge"
            },
            "tags_all": {
              "Deployment": "tf",
              "Name": "aws-alb-tg-tf",
              "Use": "cloud-resume-challenge"
            },
            "target_type": "instance",
            "vpc_id": "vpc-06d97ae04aa47e027"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb-tg-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws-main"
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-syd-main-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4a2b4f5391612cd",
            "connectivity_type": "public",
            "id": "nat-0c698e00782b6b48e",
            "network_interface_id": "eni-0e8ec0d4eb19a3ff0",
            "private_ip": "10.0.1.149",
            "public_ip": "13.236.79.165",
            "subnet_id": "subnet-0a48467efd0b591e9",
            "tags": {
              "Deployment": "tf",
              "Name": "aws-ngw-syd-pub-tf",
              "Use": "cloud-resume-challenge"
            },
            "tags_all": {
              "Deployment": "tf",
              "Name": "aws-ngw-syd-pub-tf",
              "Use": "cloud-resume-challenge"
            }
          },
          "dependencies": [
            "aws_eip.eip-nat",
            "aws_internet_gateway.igw-syd-main",
            "aws_subnet.pub-sub",
            "aws_vpc.vpc_main",
            "data.aws_availability_zones.azs-syd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:596389246013:route-table/rtb-00ab8c26b9438b87c",
            "id": "rtb-00ab8c26b9438b87c",
            "owner_id": "596389246013",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a96ee1c0acc91f3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Deployment": "tf",
              "Name": "aws-rt-pub-tf",
              "Use": "cloud-resume-challenge"
            },
            "tags_all": {
              "Deployment": "tf",
              "Name": "aws-rt-pub-tf",
              "Use": "cloud-resume-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d97ae04aa47e027"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-syd-main",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:596389246013:route-table/rtb-044594e25780caa47",
            "id": "rtb-044594e25780caa47",
            "owner_id": "596389246013",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c698e00782b6b48e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Deployment": "tf",
              "Name": "aws-rt-pvt-tf",
              "Use": "cloud-resume-challenge"
            },
            "tags_all": {
              "Deployment": "tf",
              "Name": "aws-rt-pvt-tf",
              "Use": "cloud-resume-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d97ae04aa47e027"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-nat",
            "aws_internet_gateway.igw-syd-main",
            "aws_nat_gateway.ngw-syd-main-pub",
            "aws_subnet.pub-sub",
            "aws_vpc.vpc_main",
            "data.aws_availability_zones.azs-syd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pub-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f74efe969e94cc98",
            "route_table_id": "rtb-00ab8c26b9438b87c",
            "subnet_id": "subnet-0a48467efd0b591e9"
          },
          "dependencies": [
            "aws_internet_gateway.igw-syd-main",
            "aws_route_table.rt-pub",
            "aws_subnet.pub-sub",
            "aws_vpc.vpc_main",
            "data.aws_availability_zones.azs-syd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pvt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0daf993b8eded8a97",
            "route_table_id": "rtb-044594e25780caa47",
            "subnet_id": "subnet-074cdf98c7c138cb0"
          },
          "dependencies": [
            "aws_eip.eip-nat",
            "aws_internet_gateway.igw-syd-main",
            "aws_nat_gateway.ngw-syd-main-pub",
            "aws_route_table.rt-pvt",
            "aws_subnet.pub-sub",
            "aws_subnet.pvt-sub",
            "aws_vpc.vpc_main",
            "data.aws_availability_zones.azs-syd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pvt2-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05098466eca4d5fc7",
            "route_table_id": "rtb-044594e25780caa47",
            "subnet_id": "subnet-0a502fcd20cdd597b"
          },
          "dependencies": [
            "aws_eip.eip-nat",
            "aws_internet_gateway.igw-syd-main",
            "aws_nat_gateway.ngw-syd-main-pub",
            "aws_route_table.rt-pvt",
            "aws_subnet.pub-sub",
            "aws_subnet.pvt-sub2",
            "aws_vpc.vpc_main",
            "data.aws_availability_zones.azs-syd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws-main",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:596389246013:security-group/sg-01c509dd57b6c726d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c509dd57b6c726d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 443 from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80 from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "crc-sg-alb",
            "name_prefix": "",
            "owner_id": "596389246013",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment": "tf",
              "Name": "aws-sg-alb-wp-tf",
              "Use": "cloud-resume-challenge"
            },
            "tags_all": {
              "Deployment": "tf",
              "Name": "aws-sg-alb-wp-tf",
              "Use": "cloud-resume-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d97ae04aa47e027"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-ec2-wp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04facdf33699ed101",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "aws_security_group.sg-alb"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "aws_security_group.sg-alb"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": null,
            "name_prefix": null,
            "owner_id": null,
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment": "tf",
              "Name": "aws-sg-ec2-wp-tf",
              "Use": "cloud-resume-challenge"
            },
            "tags_all": {
              "Deployment": "tf",
              "Name": "aws-sg-ec2-wp-tf",
              "Use": "cloud-resume-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d97ae04aa47e027"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-alb",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-rds-wp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws-main",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:596389246013:subnet/subnet-0a48467efd0b591e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a48467efd0b591e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "596389246013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment": "tf",
              "Name": "aws-pub-sub-syd-tf",
              "Use": "cloud-resume-challenge"
            },
            "tags_all": {
              "Deployment": "tf",
              "Name": "aws-pub-sub-syd-tf",
              "Use": "cloud-resume-challenge"
            },
            "vpc_id": "vpc-06d97ae04aa47e027"
          },
          "dependencies": [
            "aws_vpc.vpc_main",
            "data.aws_availability_zones.azs-syd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws-main",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:596389246013:subnet/subnet-074cdf98c7c138cb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074cdf98c7c138cb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596389246013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment": "tf",
              "Name": "aws-pvt-sub-syd-tf",
              "Use": "cloud-resume-challenge"
            },
            "tags_all": {
              "Deployment": "tf",
              "Name": "aws-pvt-sub-syd-tf",
              "Use": "cloud-resume-challenge"
            },
            "vpc_id": "vpc-06d97ae04aa47e027"
          },
          "dependencies": [
            "aws_vpc.vpc_main",
            "data.aws_availability_zones.azs-syd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws-main",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:596389246013:subnet/subnet-0a502fcd20cdd597b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a502fcd20cdd597b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596389246013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment": "tf",
              "Name": "aws-pvt-sub2-syd-tf",
              "Use": "cloud-resume-challenge"
            },
            "tags_all": {
              "Deployment": "tf",
              "Name": "aws-pvt-sub2-syd-tf",
              "Use": "cloud-resume-challenge"
            },
            "vpc_id": "vpc-06d97ae04aa47e027"
          },
          "dependencies": [
            "aws_vpc.vpc_main",
            "data.aws_availability_zones.azs-syd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws-main",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:596389246013:vpc/vpc-06d97ae04aa47e027",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06003892945d63f8d",
            "default_route_table_id": "rtb-0982aaea86a0c7291",
            "default_security_group_id": "sg-0b3fd9b0afdfc9afe",
            "dhcp_options_id": "dopt-044efe7883df060de",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06d97ae04aa47e027",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0982aaea86a0c7291",
            "owner_id": "596389246013",
            "tags": {
              "Deployment": "tf",
              "Name": "main-vpc-tf",
              "Use": "cloud-resume-challenge-tf"
            },
            "tags_all": {
              "Deployment": "tf",
              "Name": "main-vpc-tf",
              "Use": "cloud-resume-challenge-tf"
            }
          }
        }
      ]
    }
  ]
}